added goal and some gravatars

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://codestack.github.com
 title: Codestack
-subtitle: We are open source hacking collective based in Croatia
+subtitle: We are open source hacking collective
 author: Codestack
 simple_search: http://google.com/search
 description: Home page for Codestack.
